[package]
name = "focusvent_front"
version = "0.1.0"
authors = ["werner <werner@yahoo.es>"]

[dependencies]
yew = { git = "https://github.com/DenisKolodin/yew", rev = "a5213c57430b2f18539aeb25939bdc8c5c348157" }
yew_router = { git = "https://github.com/hgzimmerman/YewRouter" }
stdweb = "0.4.8"
serde = "1.0.70"
serde_derive = "1.0.70"
log = "0.4.3"
